# gst-compliance-gym

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-28-gst-compliance-gym.md
docs/superpowers/specs/: 2026-03-28-gst-compliance-gym-design.md
server/: .dockerignore  Dockerfile  __init__.py  app.py  data_generator.py  graders.py  gst_environment.py  gst_rules.py
tests/: test_data_generator.py  test_environment.py  test_graders.py  test_gst_rules.py
